# LyricFlow

./: .coverage  .env.example  .gitignore  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STATUS.md  VISUAL_OVERVIEW.md  config.yaml.example  main.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/prompts/: lyricsflow.prompt.md
docs/: MUSIXMATCH_GUIDE.md  MUSIXMATCH_README.md  PROVIDERS_GUIDE.md  QUICK_MODEL_GUIDE.md  USAGE.md  musixmatch-api.json
lyricflow/: __init__.py  __main__.py
lyricflow/api/: __init__.py  server.py
lyricflow/cli/: __init__.py  main.py
lyricflow/core/: __init__.py  audio_handler.py  lrclib.py  lyrics_provider.py  lyrics_sync.py  musixmatch.py  romanizer.py  whisper_gen.py
lyricflow/tui/: __init__.py
lyricflow/utils/: __init__.py  config.py  logging.py
summaries/: ALL_FIXED_SUMMARY.md  AUDIOHANDLER_WHISPER_FIX_SUMMARY.md  BUGFIX_COMPLETE.md  ENHANCEMENT_PREFILL.md  FINAL_COMPLETION_SUMMARY.md  FIX_SUMMARY.md  GEMINI_FIX_SUMMARY.md  INTEGRATION_COMPLETE.md  LRC_FORMAT_FIX.md  MANIFEST.md  MODEL_CONFIG_UPDATE.md  MULTI_PROVIDER_COMPLETE.md  MUSIXMATCH_CAPTCHA_ISSUE.md  NEWLINE_PRESERVATION_FIX.md  PROJECT_SUMMARY.md  PYTEST_IMPLEMENTATION_SUMMARY.md  ROMANIZATION_TEST_FIX.md  TEST_SUMMARY.md  TEST_TUI_COMPLETE.md  TIMESTAMP_CLEANING_COMPLETE.md  TUI_COMPLETE_SUMMARY.md  TUI_FIXES_COMPLETE.md  TUI_IMPLEMENTATION.md
tests/: 01 Shogeki.lrc  01 Shogeki_romaji.lrc  01 Shogeki_whisper.lrc  16 Soul's Refrain.lrc  16 Soul's Refrain_romaji.lrc  README.md  conftest.py  demo_providers.py  lrc_converter.py  test_api_newlines.py  test_audio_handler.py  test_colored_logs.py  test_config.py  test_config_load.py  test_fetch_bug.py  test_gemini.py  test_gemini_direct.py  test_integration.py  test_lemon.lrc  test_lyricflow.py  test_lyrics_sync.py  test_musixmatch_bug.py  test_musixmatch_complete.py  test_prefill.py  test_quick.py  test_request.json  test_romanizer.py  test_romanizer_direct.py  test_tui.py  test_tui_manual.py  test_whisper.py
